RESOLVED FIXED313652
citroen.fr: one section fails to display properly after scrolling
https://bugs.webkit.org/show_bug.cgi?id=313652
Summary citroen.fr: one section fails to display properly after scrolling
Jean-Yves Avenard [:jya]
Reported 2026-04-29 07:13:25 PDT
Steps to reproduce: 1. With Safari 2. Go to https://www.citroen.fr/univers-citroen/concept-cars/elo.html 3. Scroll until the “Montez à bord !” Section Result: Blank area Expected: A video showing the doors of the car being opened. rdar://166181001
Attachments
Jean-Yves Avenard [:jya]
Comment 1 2026-04-29 07:22:19 PDT
EWS
Comment 2 2026-04-30 15:30:44 PDT
Committed 312399@main (013da9aa8cc1): <https://commits.webkit.org/312399@main> Reviewed commits have been landed. Closing PR #63895 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.